[gd_scene load_steps=12 format=2]

[ext_resource path="res://actors/player/AnimatedSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/player/playerState.gd" type="Script" id=2]
[ext_resource path="res://actors/player/tempChar.gd" type="Script" id=3]
[ext_resource path="res://actors/player/IS_JUMPING.gd" type="Script" id=4]
[ext_resource path="res://actors/player/IS_IDLE.gd" type="Script" id=5]
[ext_resource path="res://actors/player/IS_WALKING.gd" type="Script" id=6]
[ext_resource path="res://actors/player/IS_HANGING.gd" type="Script" id=7]
[ext_resource path="res://actors/player/IS_SPRINTING.gd" type="Script" id=8]
[ext_resource path="res://actors/player/IS_CLIMBING.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.5, 12 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 4.75, 4.5 )

[node name="Player" type="KinematicBody2D"]
collision/safe_margin = 0.1
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 7 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -1 )
animation = "ledgeClimb"
frame = 2

[node name="climb" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="climb"]
position = Vector2( 0.75, -1 )
shape = SubResource( 41 )
disabled = true

[node name="playerState" type="Node" parent="."]
script = ExtResource( 2 )

[node name="IS_JUMPING" type="Node" parent="playerState"]
script = ExtResource( 4 )

[node name="IS_WALKING" type="Node" parent="playerState"]
script = ExtResource( 6 )

[node name="IS_IDLE" type="Node" parent="playerState"]
script = ExtResource( 5 )

[node name="IS_HANGING" type="Node" parent="playerState"]
script = ExtResource( 7 )

[node name="IS_SPRINTING" type="Node" parent="playerState"]
script = ExtResource( 8 )

[node name="IS_CLIMBING" type="Node" parent="playerState"]
script = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -14.0
margin_top = -27.0
margin_right = 90.0
margin_bottom = 5.0
tab_size = 2
text = "test"

[node name="mainCamera" type="Camera2D" parent="."]
position = Vector2( 134, -49 )
current = true
process_mode = 0
limit_top = 0
drag_margin_h_enabled = true
smoothing_enabled = true
